header and navbar

--- a/index.html
+++ b/index.html
@@ -8,10 +8,165 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
+      <header class="header">
+        <img
+          class="header-item"
+          src="https://assets.pokemon.com/assets/cms2/img/misc/gus/buttons/logo-pokemon-79x45.png"
+        />
+
+        <img
+          class="header-item"
+          src="https://assets.pokemon.com/assets/cms2/img/misc/gus/buttons/logo-pokemoncenter-79x45.png"
+        />
+
+        <img
+          class="header-item"
+          src="https://assets.pokemon.com/assets/cms2/img/misc/gus/buttons/corporate-en.png"
+        />
+
+        <img
+          class="header-item"
+          src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/tcg-175-en.png"
+        />
+
+        <img
+          class="header-item"
+          src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/scarlet-violet-175x50-en.jpg"
+        />
+
+        <img
+          class="header-item"
+          src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/scarlet-violet-175x50-en.jpg"
+        />
+
+        <img
+          class="header-item"
+          src="https://assets.pokemon.com/assets/cms2/img/misc/gus/promotions/community-forums-175x50-en.png"
+        />
+      </header>
+
+      <nav>
+        <ul>
+          <li class="nav-item nav-item-1">
+            <i class="fa fa-home"></i>
+            <p>Home</p>
+          </li>
+          <li class="nav-item nav-item-2">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M21.9012 13H16.8506C16.3873 15.2822 14.3696 17 11.9506 17C9.53167 17 7.51391 15.2822 7.05064 13H2C2.50172 18.0533 6.76528 22 11.9506 22C17.136 22 21.3995 18.0533 21.9012 13Z"
+                fill="#4F4F4F"
+              />
+              <path
+                d="M21.9012 11C21.3995 5.94668 17.136 2 11.9506 2C6.76528 2 2.50172 5.94668 2 11H7.05064C7.51391 8.71776 9.53167 7 11.9506 7C14.3696 7 16.3873 8.71776 16.8506 11H21.9012Z"
+                fill="#4F4F4F"
+              />
+              <path
+                clip-rule="evenodd"
+                d="M11.9506 15C13.6075 15 14.9506 13.6569 14.9506 12C14.9506 10.3431 13.6075 9 11.9506 9C10.2938 9 8.95062 10.3431 8.95062 12C8.95062 13.6569 10.2938 15 11.9506 15ZM13.4506 12C13.4506 12.8284 12.7791 13.5 11.9506 13.5C11.1222 13.5 10.4506 12.8284 10.4506 12C10.4506 11.1716 11.1222 10.5 11.9506 10.5C12.7791 10.5 13.4506 11.1716 13.4506 12Z"
+                fill="#4F4F4F"
+                fill-rule="evenodd"
+              />
+            </svg>
+            <p>Pokédex</p>
+          </li>
+          <li class="nav-item nav-item-3">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M20 7h-3V4c0-1.103-.897-2-2-2H9c-1.103 0-2 .897-2 2v3H4c-1.103 0-2 .897-2 2v6c0 1.103.897 2 2 2h3v3c0 1.103.897 2 2 2h6c1.103 0 2-.897 2-2v-3h3c1.103 0 2-.897 2-2V9c0-1.103-.897-2-2-2zm0 8h-5v4h.001v1H9v-5H4V9h5V4h6v5h5v6z"
+              />
+              <path d="M8 14v-4l-3 2zm8 0 3-2-3-2zm-6-6h4l-2-3zm2 11 2-3h-4z" />
+              <circle cx="12" cy="12" r="2" />
+            </svg>
+            <p>Video Games & Apps</p>
+          </li>
+          <li class="nav-item nav-item-4">
+            <svg
+              version="1.1"
+              id="_x32_"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 512 512"
+              xml:space="preserve"
+            >
+              <g>
+                <path
+                  class="st0"
+                  d="M304.872,377.116v-53.41c0.007,0,0.011,0.008,0.018,0.015v-3.762c0.808-0.41,1.683-0.812,2.492-1.147
+		c0.808-0.402,1.68-0.805,2.487-1.214c10.425-4.968,21.73-10.354,31.409-16.477c2.965-1.877,5.725-3.896,8.213-6.116
+		c2.082-1.751,3.967-3.635,5.714-5.587c12.377-13.855,16.343-31.212,7.87-45.059c-4.711-7.665-11.836-12.112-19.371-13.52
+		c-4.302-0.946-8.741-0.812-13.05,0.336c-0.872,0.201-1.814,0.469-2.686,0.804c-5.583,1.952-10.563,5.513-14.131,10.63
+		c0.54-6.19-0.939-12.18-3.967-17.222c-0.465-0.804-0.938-1.616-1.542-2.354c-1.013-1.475-2.156-2.756-3.438-3.963v98.127
+		c-0.008-0.008-0.012-0.014-0.018-0.014v-98.127c0.007,0.008,0.011,0.008,0.018,0.014v-7.33c-0.008,0-0.012,0.008-0.018,0.008
+		V35.636C304.872,15.956,288.931,0,269.24,0H49.504C29.808,0,13.868,15.956,13.868,35.636v341.48
+		c0,19.68,15.94,35.629,35.636,35.636H269.24C288.931,412.745,304.872,396.797,304.872,377.116z M31.354,377.116V35.636
+		c0.018-10.027,8.123-18.131,18.15-18.153H269.24c10.022,0.022,18.127,8.126,18.15,18.153v341.48
+		c-0.023,10.026-8.127,18.13-18.15,18.146H49.504C39.477,395.247,31.372,387.142,31.354,377.116z"
+                />
+                <path
+                  class="st0"
+                  d="M160.521,136.586c-0.343-0.998-0.644-1.542-1.158-1.542c-0.51,0-0.801,0.544-1.14,1.542
+		c-5.848,17.296-36.497,59.808-47.804,68.941l-0.54,0.849l0.54,0.842c11.307,9.148,41.957,51.652,47.804,68.956
+		c0.338,0.998,0.629,1.534,1.14,1.534c0.514,0,0.815-0.536,1.158-1.534c5.832-17.304,36.492-59.808,47.804-68.956l0.537-0.842
+		l-0.537-0.849C197.013,196.395,166.353,153.882,160.521,136.586z"
+                />
+                <path
+                  class="st0"
+                  d="M77.474,42.698l-0.503-0.67l-0.495,0.67C73.974,50.14,60.774,68.45,55.898,72.368l-0.23,0.373l0.23,0.364
+		c4.876,3.918,18.076,22.235,20.578,29.677l0.495,0.663l0.503-0.663c2.504-7.442,15.706-25.758,20.574-29.677l0.235-0.364
+		l-0.235-0.373C93.181,68.45,79.978,50.14,77.474,42.698z"
+                />
+                <path
+                  class="st0"
+                  d="M242.263,317.718l-0.5-0.664l-0.499,0.664c-2.503,7.449-15.699,25.758-20.571,29.677l-0.238,0.365l0.238,0.373
+		c4.872,3.918,18.068,22.228,20.571,29.669l0.499,0.671l0.5-0.671c2.503-7.442,15.706-25.752,20.578-29.669l0.231-0.373
+		l-0.231-0.365C257.969,343.476,244.766,325.166,242.263,317.718z"
+                />
+                <path
+                  class="st0"
+                  d="M474.659,121.941L304.891,60.196v18.563l163.782,59.6c1.885,0.67,3.497,1.608,4.98,2.823
+		c0.738,0.536,1.479,1.207,2.082,1.877c4.506,4.783,6.186,11.911,3.836,18.571L362.74,482.528
+		c-3.43,9.408-13.859,14.257-23.271,10.824L132.978,418.22c-3.092-1.14-5.717-3.024-7.669-5.445h-19.773
+		c3.363,9.818,10.965,18.027,21.456,21.863l206.485,75.19c13.118,4.775,27.107,1.416,36.593-7.531
+		c1.349-1.214,2.556-2.556,3.699-4.038c2.22-2.89,4.105-6.123,5.378-9.75l116.831-320.898
+		C502.704,149.115,493.155,128.668,474.659,121.941z"
+                />
+                <path
+                  class="st0"
+                  d="M412.831,205.639l0.466-0.149c4.723-4.574,17.669-8.939,27.122-14.943c10.224-6.473,14.876-17.498,9.844-25.73
+		c-5.274-8.574-17.118-8.216-22.291-0.782c0.808-9.021-8.041-16.91-17.592-13.729c-9.143,3.069-12.67,14.496-8.998,26.035
+		c3.39,10.674,10.504,22.34,11.174,28.88L412.831,205.639z"
+                />
+              </g>
+            </svg>
+            <p>Trading Card Game</p>
+          </li>
+          <li class="nav-item nav-item-5">
+            <i class="fa fa-circle-play"></i>
+            <p>Animation</p>
+          </li>
+          <li class="nav-item nav-item-6">
+            <i class="fa fa-trophy"></i>
+            <p>Play! Pokémon Events</p>
+          </li>
+          <li class="nav-item nav-item-7">
+            <i class="fa fa-newspaper"></i>
+            <p>News</p>
+          </li>
+        </ul>
+      </nav>
+
       <h1>Video Games & Apps</h1>
       <div class="grid">
         <div class="card card-1 animate__animated">
@@ -59,5 +214,6 @@
         </div>
       </div>
     </div>
+    <div style="height: 5rem;"></div>
   </body>
 </html>
